<resources>
    <string name="app_name">ProPentest</string>
    <string name="START">START</string>
    <string name="reconnaissance">RECONNAISSANCE</string>
    <string name="scanning">scanning</string>
    <string name="gaining_and_maintaining_access">GAINING AND MAINTAINING ACCESS</string>
    <string name="http_tools">http tools</string>
    <string name="report">REPORT</string>
    <string name="whois_lookup">Whois Lookup</string>
    <string name="network_pentest">NETWORK PENTEST</string>
    <string name="NIPPER">NIPPER</string>
    <string name="ndroidmap">NdroidMap</string>
    <string name="web_pentest">WEB PENTEST</string>
    <string name="droidsqli">DROIDSQLI</string>
    <string name="droidsheep">DROIDSHEEP</string>
    <string name="zanti">ZANTI</string>
    <string name="loic">LOIC</string>
    <string name="back">Back</string>
    <string name="scanclick">Scanning clicked</string>
    <string name="gainclicked">gaining_and_maintaining_access clicked</string>
    <string name="next">NEXT</string>
    <string name="_6_priority_to_remediate_low_not_urgent_critical_address_immediately">6. Priority to remediate (Low=Not urgent, Critical=Address immediately)</string>
    <string name="priority_prompt">promt</string>
    <string name="critical_prompt">critical_prmt</string>
    <string name="vul_prompt">vul_prompt</string>
    <string name="finish">Finish</string>
    <string name="SCANNING">SCANNING</string>
    <string name="Network_manager">Network Manager</string>
    <string name="propentest_report">ProPentest Report</string>
    <string name="date">date</string>
    <string name="company_name">company name</string>
    <string name="todo">TODO</string>
    <string name="choose_image">Choose Image</string>
    <string name="selectImage">selectImage</string>
    <string name="EVIDENCE">Evidence</string>
    <string name="done">DONE</string>
    <string name="Create_PDF">createpdf</string>
    <string name="upload_image">Upload Image</string>
    <string name="firstmessage">
    This application is for authorized use only. Users have no explicit or implicit expectation of privacy.
    Any or all uses of this application and all data on this application may be intercepted, monitored, recorded, copied, audited,
    inspected, and disclosed to authorized sites and law enforcement personnel, as well as authorized officials of other agencies.
    By using this application, the user consent to such disclosure at the discretion of authorized site personnel. Unauthorized or improper use
    of this system may result in administrative disciplinary action, civil and criminal penalties. By continuing to use this system you
    indicate your awareness of and consent to these terms and conditions of use.</string>
    <string name="in_this_section_all_the_pentesting_phase_is_already_done_pentester_should_include_all_information_and_evidence_of_the_result_for_a_better_report_the_result_is_write_in_a_report_to_be_record">In this section,   all the pentesting phase   is already done. Pentester should include   all information and evidence of the result for a better report. The result is write in a report to be record.</string>
    <string name="provide_all_information_for_better_report">**Provide all information for better report</string>
    <string name="provide_all_information">**Provide all information.</string>
    <string name="write_report">Write Report</string>
    <string name="_3_select_base_vulnerability">3. Select Base Vulnerability</string>
    <string name="_1_project_name">1. Project Name</string>
    <string name="space">    </string>
    <string name="screenshot_the_result_for_evidence_report">**Screenshot the result for evidence report</string>

    />
</resources>
