<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".report"
    android:background="@drawable/gr7">

    <TextView
        android:id="@+id/textView"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="139dp"
        android:layout_marginLeft="139dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="129dp"
        android:fontFamily="@font/adamina"
        android:text="@string/report"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button18"
        style="@android:style/Widget.Holo.Light.Button.Inset"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:background="#46B64B"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="29dp"
        android:onClick="startreport"
        android:text="@string/write_report" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="58dp"
        android:layout_marginTop="129dp"
        android:layout_marginEnd="59dp"
        android:text="@string/in_this_section_all_the_pentesting_phase_is_already_done_pentester_should_include_all_information_and_evidence_of_the_result_for_a_better_report_the_result_is_write_in_a_report_to_be_record"
        android:textAlignment="center"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="279dp"
        android:layout_height="232dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="242dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="129dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#FFFFFF"
        app:srcCompat="@drawable/rl" />

</RelativeLayout>