<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.ProPentest.form2">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/adamina"
            android:text="@string/_1_project_name"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.081"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.018" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="306dp"
            android:layout_height="37dp"
            android:backgroundTint="#0D3610"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="name of company or pentester"
            android:text=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.152"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.059" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="306dp"
            android:layout_height="37dp"
            android:backgroundTint="#0D3610"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="1 January 2019"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.152"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.165" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="95dp"
            android:layout_height="29dp"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/adamina"
            android:text="2. Date"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.116" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/adamina"
            android:text="@string/_3_select_base_vulnerability"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.216" />


        <Spinner
            android:id="@+id/spinner"
            android:layout_width="315dp"
            android:layout_height="30dp"
            android:background="#C3C7BBBB"
            android:entries="@array/vul_array"
            android:prompt="@string/vul_prompt"
            android:singleLine="true"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.166"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.259" />


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/adamina"
            android:text="4. Affected Asset"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.033"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.299" />

        <EditText
            android:id="@+id/assettext"
            android:layout_width="310dp"
            android:layout_height="42dp"
            android:backgroundTint="#0D3610"
            android:hint="Domain etc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.118"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.34" />


        <TextView
            android:id="@+id/textView6"
            android:layout_width="350dp"
            android:layout_height="49dp"
            android:text="5. Likelihood of exploitation( 1=difficult to exploit, 10=Trivial to exploit)"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.134"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.398" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="122dp"
            android:layout_height="31dp"
            android:background="#C3C7BBBB"
            android:entries="@array/critical_array"
            android:prompt="@string/critical_prompt"
            android:singleLine="true"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.041"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.448" />

        <EditText
            android:id="@+id/et4"
            android:layout_width="334dp"
            android:layout_height="71dp"
            android:background="@drawable/border_line"
            android:ems="10"
            android:hint="Step 1 do this... step 2 do that.."
            android:inputType="textPersonName"
            android:singleLine="true"
            android:textSize="12sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.116"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.642"
            tools:visibility="visible" />

        <EditText
            android:id="@+id/et5"
            android:layout_width="334dp"
            android:layout_height="71dp"
            android:background="@drawable/border_line"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="Any important reminder"
            android:singleLine="true"
            android:textSize="12sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.077"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.758"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="355dp"
            android:layout_height="45dp"
            android:text="@string/_6_priority_to_remediate_low_not_urgent_critical_address_immediately"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.142"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.491" />

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="136dp"
            android:layout_height="25dp"
            android:entries="@array/priority_array"
            android:prompt="@string/priority_prompt"
            android:background="#C3C7BBBB"
            android:singleLine="true"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.021"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.54" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="305dp"
            android:layout_height="31dp"
            android:text="7.Steps to reproduce vulnerability"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.042"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.577" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="91dp"
            android:layout_height="30dp"
            android:background="#00662929"
            android:text="8. Notes"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.028"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.69" />


        <Button
            android:id="@+id/finish"
            android:layout_width="409dp"
            android:layout_height="72dp"
            android:background="#46B64B"
            android:onClick="finish"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.998" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_begin="1105dp"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="270dp"
            android:layout_height="47dp"
            android:text="@string/provide_all_information"
            android:textColor="#C62828"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="19dp"
            tools:layout_editor_absoluteY="924dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>