<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llPdf"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:baselineAligned="false"
            android:fontFamily="@font/adamina"
            android:text="@string/propentest_report"
            android:textColor="#084D0B"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/company_name"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-black"
            android:lineSpacingExtra="8sp"
            android:textColor="#FD0E0B0B"
            android:text=""
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#FD0E0B0B"
            android:lineSpacingExtra="8sp"
            android:text=""
            android:textSize="12sp" />

        <TextView
            android:id="@+id/base"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:layout_gravity=""
            android:layout_marginTop="20dp"
            android:textColor="#FD0E0B0B"
            android:fontFamily="serif"
            android:lineSpacingExtra="8sp"
            android:text="      Base Vulnerability Class:"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/basevultext"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:textColor="#FD0E0B0B"
            android:lineSpacingExtra="8sp"
            android:text="    "
            android:textSize="14sp" />

        <TextView
            android:id="@+id/asset"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:layout_gravity="center|left"
            android:layout_marginTop="5dp"
            android:textColor="#FD0E0B0B"
            android:fontFamily="serif"
            android:lineSpacingExtra="8sp"
            android:text="      Affected Asset:"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/assettext"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:layout_marginTop="5dp"
            android:textColor="#FD0E0B0B"
            android:lineSpacingExtra="8sp"
            android:layout_gravity="center"
            android:text="    "
            android:textSize="14sp" />

        <TextView
            android:id="@+id/likeli"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:layout_gravity="center|left"
            android:layout_marginTop="5dp"
            android:textColor="#FD0E0B0B"
            android:fontFamily="serif"
            android:lineSpacingExtra="8sp"
            android:text="      Likelihood of exploitation : "
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/likelitext"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:textColor="#FD0E0B0B"
            android:lineSpacingExtra="8sp"
            android:text="    "
            android:textSize="14sp" />

        <TextView
            android:id="@+id/priority"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:layout_gravity="center|left"
            android:layout_marginTop="5dp"
            android:fontFamily="serif"
            android:lineSpacingExtra="8sp"
            android:textColor="#FD0E0B0B"
            android:text="      Priority to remediate :  "
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/priotext"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:layout_gravity="center"
            android:textColor="#FD0E0B0B"
            android:layout_marginTop="5dp"
            android:lineSpacingExtra="8sp"
            android:text="    "
            android:textSize="14sp" />

        <TextView
            android:id="@+id/reproduce"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:layout_gravity="center|left"
            android:layout_marginTop="5dp"
            android:fontFamily="serif"
            android:lineSpacingExtra="8sp"
            android:text="      The steps to reproduce vulnerability: "
            android:textColor="#FD0E0B0B"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/reprotext"
            android:layout_width="match_parent"
            android:layout_height="104dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="#FD0E0B0B"
            app:layout_constraintBottom_toBottomOf="@+id/button1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.834" />
        <TextView
            android:id="@+id/note"
            android:layout_width="412dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="#74635151"
            android:lineSpacingExtra="8sp"
            android:text="*NOTES* "
            android:textAlignment="center"
            android:textColor="#C62828"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/notetext"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="#FD0E0B0B"
            android:layout_marginTop="5dp"
            android:lineSpacingExtra="8sp"
            android:text=""
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv15"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:baselineAligned="false"
            android:layout_marginTop="5dp"
            android:lineSpacingExtra="8sp"
            android:fontFamily="@font/adamina"
            android:text="@string/EVIDENCE"
            android:textColor="#084D0B"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="299dp"
            android:layout_height="332dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/image_border"
            android:contentDescription="@string/todo"
            android:lineSpacingExtra="8sp"
            android:padding="1dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_image_black_24dp" />

        <Button
            android:id="@+id/uploadImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="8sp"
            android:onClick="chooseImage"
            android:text="@string/upload_image" />
        <Button
            android:id="@+id/pdf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="3dp"
            android:onClick="savePdf"
            android:text="@string/Create_PDF" />


    </LinearLayout>
</ScrollView>